<resources>
    <string name="app_name">home</string>
    <string name="hotel">Hotel</string>
    <string name="grate">grate</string>
    <string name="Grate">Grate</string>
    <string name="превосходно">Превосходно</string>
    <string name="превосходно1">Превосходно</string>
    <string name="превосходно11">Превосходно</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="_134_673">От 134 673р</string>
    <string name="madinat_makadi_safia_road_makadi_bay">Madinat Makadi, Safia Road, Makadi bay Египет</string>
    <string name="за">за тур с перелетом</string>
    <string name="отель">Отель</string>
    <string name="about">Об отеле</string>
    <string name="_3">3-я линия</string>
    <string name="vip_18">Отель VIP-класса с собственными гольф полями. Высокий уровень сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="wi_fi">Платный wi-fi в фойе</string>
    <string name="_1">1км до аэропорта</string>
    <string name="fkl">1км до пляжа</string>
    <string name="выбрать">К выбору отеля</string>
    <string name="stg">Steigenberg Makadi</string>
    <string name="steigenberger_makadi2">Steigenberger Makadi</string>
    <string name="бассеуй">Стандартный с видом на бассейн или сад</string>
    <string name="цук">Все включено</string>
    <string name="клнд">Кондиционер</string>
</resources>