<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:text="@string/_3"
        android:textColor="#8F8A8A"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:text="@string/wi_fi"
        android:textColor="#8F8A8A"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:text="@string/_1"
        android:textColor="#8F8A8A"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:text="@string/fkl"
        android:textColor="#8F8A8A"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="400dp"
        android:layout_height="155dp"
        android:text="@string/vip_18"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/comfortable" />

        <ImageView
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginStart="7dp"

            android:layout_marginTop="85sp"
            android:background="@drawable/all" />

        <ImageView
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginTop="160dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/group2" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/str" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/str" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="165dp"
            android:background="@drawable/str" />


    </FrameLayout>


    <Button
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:backgroundTint="#2196F3"
        android:text="@string/выбрать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />


</androidx.constraintlayout.widget.ConstraintLayout>